ndb/src/kernel/blocks/dblqh/DblqhMain.cpp
@@ -14577,7 +14577,7 @@ void Dblqh::srLogLimits(Signal* signal)
   while(true) {
     ndbrequire(tmbyte < 16);
     if (logPartPtr.p->logExecState == LogPartRecord::LES_SEARCH_STOP) {
-      if (logFilePtr.p->logMaxGciCompleted[tmbyte] < logPartPtr.p->logLastGci) {
+      if (logFilePtr.p->logMaxGciCompleted[tmbyte] <= logPartPtr.p->logLastGci) {
         jam();
       /* --------------------------------------------------------------------
        *  WE ARE STEPPING BACKWARDS FROM MBYTE TO MBYTE. THIS IS THE FIRST 
